# mgokart

./: .gitignore  README  annotate_frame.py  boundary_mapping.py  course2  data_logger.py  edison.py  encoder_driving.c  filter_data.py  finish_line.py  greedy_boundary_mapping.py  hokuyo.py  kalman.py  lastCourse  main.py  me_comms.py  parse_data.py  plot_frame.py  predictive_speed.py  regression_steering.py  requirements.txt  simulator.py  test_comms.py  utility.py  validate_cone_detection.py
courses/: course1  course1_center  course2  course2_end  course2_real_end  course_tmp  lastCourse
data/: lot_10_between_curves.csv  lot_12_left.csv  lot_13_end.csv  lot_1_straight.csv  lot_4_almost_right.csv  lot_7_right.csv
electrical/: electrical-rescue.lib  electrical.pro
lidar_comms/: hokuyo.py  takescan.py
lidar_data/: 5_so_fast_1  lot_2_straight.csv  lot_9_between_curves.csv  (+1 more)
vision/: CMakeLists.txt  ConeDetector.cpp  rename.py  trainer.cpp  trainer.hpp
vision/cone_locations/: conez000.txt  conez002.txt  conez003.txt  conez004.txt  conez005.txt  conez006.txt  conez007.txt  conez008.txt  conez009.txt  conez010.txt  conez011.txt  conez012.txt  conez013.txt  conez014.txt  conez015.txt  conez016.txt  conez017.txt  conez018.txt  conez019.txt  conez020.txt  conez021.txt  conez022.txt  conez023.txt  conez024.txt  conez025.txt  conez026.txt  conez027.txt  conez028.txt  conez029.txt  conez030.txt  conez031.txt  conez032.txt  conez033.txt  conez034.txt  conez037.txt  conez038.txt  conez039.txt  conez040.txt  conez041.txt  conez042.txt  (+19 more)
vision/conez/: setting.json
(+66 files in other folders)
